--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <section id="home">
-        <div class="hero">
+        <div class="Top">
             <h2>Explore the World</h2>
             <p>Discover new adventures and create lasting memories.</p>
             <a href="#destinations" class="btn">Explore Destinations</a>
@@ -159,13 +159,13 @@
         <h2>Contact Us</h2>
         <p>If you have any questions or need assistance, feel free to reach out to us.</p>
         <address>
-            Email: <a href="mailto:info@travelexplorer.com">info@travelexplorer.com</a><br>
-            Phone: +1 (123) 456-7890
+            Email: <a href="TripEasily.com">info@tripEasily.com</a><br>
+            Phone: +91 829548****
         </address>
     </section>
 
     <footer>
-        <p>&copy; 2023 Travel Explorer</p>
+        <p>&copy; 2023 Trip Easily</p>
     </footer>
 </body>
 </html>
